adding footer and change some alignment for adding main in order to centered

--- a/main.css
+++ b/main.css
@@ -1,7 +1,6 @@
 /* Removes unwanted styling from the page */
-*,
-*::before,
-*::after {
+*
+{
   box-sizing: border-box;
   padding: 0;
   margin: 0;
@@ -10,4 +9,104 @@
   max-width: 100%;
 }
 
+body{
+  /* width: 1512px; */
+  justify-content: center;
+  align-items: center;
+  background-color: gray;
+  margin-left: 200px;
+}
+
+
+
 /* Write your code below this */
+.Navbar{
+  background-color: white;
+  height: 90px;
+  width: 1512px;
+  padding-left: 60px;
+  padding-right: 60px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+
+}
+.Navbar img{
+    height: 38px;
+    width: 533px;
+}
+
+.Navbar > ul
+{
+  display: flex;
+  list-style-type: none;
+}
+
+.Navbar > ul > li
+{  
+  margin-right: 24px;
+  font-size: 16px;
+}
+
+.Hero
+{
+  background-image: url(/images/hero.png);
+  width: 1512px;
+  height: 508px;
+  background-position: center;
+  padding-top: 309px;
+  padding-left: 103px;
+
+}
+
+.Hero button{
+  background: rgba(82, 100, 126, 1);
+  color: white;
+  padding: 10px;
+  border-radius: 5px;
+  margin-top: 10px
+}
+
+.journey{
+  background: rgba(97, 131, 121, 1);
+  width: 1512px;
+  height: 555px;
+  padding: 40px;
+  align-items: center;
+
+}
+.journey-content{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  
+  
+}
+.journey-content h3{
+  color: white;
+  font-size: 30px;
+}
+.journey-card-container{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 50px;
+ 
+}
+
+.journey-card
+{
+  background: white;
+  height: 345px;
+  width: 355px;
+  margin-right: 80px;
+  border-radius: 40px;
+  padding: 25px;
+
+}
+
+.journey-card img{
+  border-radius: 40px;
+  margin-bottom: 25px;
+}
+
