--- a/main.css
+++ b/main.css
@@ -72,6 +72,26 @@ main{
   border-radius: 5px;
   margin-top: 10px
 }
+.about-me
+{
+  display:flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 0 300px;
+  gap: 55px;
+  height: 388px;
+  width: 1512px;
+  background-color: white;
+}
+.about-me h3{
+  font-size: 32px;
+}
+.about-me p{
+  font-size: 20px;
+}
+
+
 
 .journey{
   background: rgba(97, 131, 121, 1);
